<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyExam">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" />

        <TextView
            android:id="@+id/Task3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:lines="1"
            app:autoSizeMaxTextSize="70sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="@string/task_three" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5" />

        <ImageView
            android:id="@+id/clock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_recent_history" />

        <TextView
            android:id="@+id/prep_ans"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:lines="2"
            app:autoSizeMaxTextSize="70sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            android:fontFamily="@font/calibri"
            android:text="@string/prep_ans_task3" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/task3" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/task3_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="23"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/calibrib"
                app:autoSizeMaxTextSize="70sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeTextType="uniform"
                android:text="@string/task3"
                android:textColor="@android:color/black" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" />

        <TextView
            android:id="@+id/preparation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:lines="1"
            android:paddingRight="10dp"
            app:autoSizeMaxTextSize="70sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            android:text="@string/preparation" />

        <ProgressBar
            android:id="@+id/timeline"
            style="?android:attr/progressBarStyleHorizontal"
            android:max="90"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6" />

        <TextView
            android:id="@+id/time_remaining"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:lines="1"
            app:autoSizeMaxTextSize="70sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"
            android:text="" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4" />
    </LinearLayout>
</LinearLayout>