...
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/task1_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="23"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/calibrib"
...
